--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
       - assets/images/hero.png
       - assets/images/prof.png
+      - assets/data/timetable.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
