--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
+  provider: ^6.0.5
+  flutter_inappwebview: ^6.0.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^0.13.0
+  html: ^0.15.0
+  js_interop: ^0.0.1
+  webview_flutter: ^4.13.0
+  shared_preferences: ^2.5.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
