--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,14 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.0.5
   flutter_inappwebview: ^6.0.0
-
+  lottie: ^2.7.0 
   cupertino_icons: ^1.0.8
-  http: ^0.13.0
   html: ^0.15.0
   js_interop: ^0.0.1
   webview_flutter: ^4.13.0
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/hero.png
-      - assets/images/prof.png
       - assets/data/timetable.json
+      - assets/animations/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
