--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: attendo
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,7 +33,7 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.0.5
   flutter_inappwebview: ^6.0.0
-  lottie: ^2.7.0 
+  lottie: ^2.7.0
   cupertino_icons: ^1.0.8
   html: ^0.15.0
   js_interop: ^0.0.1
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   http: ^1.5.0
+  camera:
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +60,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -66,9 +67,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/hero.png
-      - assets/data/timetable.json
-      - assets/animations/
+    - assets/images/hero.png
+    - assets/data/timetable.json
+    - assets/animations/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
